# the-bouncer-bot

./: .gitignore  bouncer.cabal  configGlobal.example  readme.md  todo.txt
.github/workflows/: haskell.yml
source/: Channels.hs  Config.hs  EventHandle.hs  Fix.hs  Main.hs  ReadUser.hs  RemoveUser.hs  Tools.hs  User.hs  VerifyDOB.hs
source/Channel/: Channels.hs
source/VRC/: Login.hs  Logout.hs
source/VRC/Group/: GetGroup.hs  GetInstance.hs  Group.hs  InviteToGroup.hs  RemoveFromGroup.hs  Update.hs
