cabal-version: 3.8
name: the-bouncer
version: 1.0.0

executable TheBouncer
    default-extensions: OverloadedStrings
    ghc-options: -Wall
    build-depends: 
        aeson >= 2.2.2 && < 2.3,
        base >= 4.17.2 && < 4.18,
        containers >= 0.6.7 && < 0.7,
        bytestring >= 0.11.5 && < 0.12,
        mtl >= 2.2.2 && < 2.3,
        text >= 2.0.2 && < 2.1,
        time >= 1.12.2 && < 1.13,
        async >= 2.2.5 && < 2.3,
        base64-bytestring >= 1.2.1 && < 1.3,
        crypton >= 1.0.0 && < 1.1,
        memory >= 0.18.0 && < 0.19,
        directory >= 1.3.7 && < 1.4,
        discord-haskell >= 1.17 && < 1.18,
        http-types >= 0.12.4 && < 0.13,
        unliftio >= 0.2.25 && < 0.3,
        http-conduit >= 2.3.8 && < 2.4
    main-is: Main.hs
    hs-source-dirs: source
    other-modules: VerifyDOB User Tools RemoveUser ReadUser EventHandle Config Fix
        VRC.Login VRC.Logout VRC.Group.InviteToGroup VRC.Group.GetGroup 
        VRC.Group.Update VRC.Group.RemoveFromGroup VRC.Group.GetInstance
        Channel.Channels
